Fix line height, word wrap, and formatting of pgs

--- a/css/styles.css
+++ b/css/styles.css
@@ -42,7 +42,7 @@
     /* Typography */
     --base-font-size: 20px;
     --base-scale: 1.25;
-    --base-line-height: calc(1em * var(--base-scale));
+    --base-line-height: calc(1em * var(--base-scale) * var(--base-scale));
     --h4-font-size: 1rem;
     --h3-font-size: calc(1rem * var(--base-scale));
     --h2-font-size: calc(1rem * var(--base-scale) * var(--base-scale));
@@ -59,12 +59,29 @@ body {
     max-width: 100vw;
     display:flex;
     flex-direction: column;
+    line-height: var(--base-line-height);
     
 }
 
- #main-page,.navbar {
+h1 {
+    font-size: var(--h1-font-size);
+}
+
+h2 {
+    font-size: var(--h2-font-size);
+}
+
+h3 {
+    font-size: var(--h3-font-size);
+}
+
+.navbar {
     margin: 10vh auto;
     width: 80%;
+}
+#main-page {
+    margin: 10vh auto;
+    max-width: 70ch;
 }
 #main-page h2 {text-align:center;}
 /*Change content page width on bigger screens*/
@@ -75,7 +92,7 @@ body {
     }
 
     * {
-        font-size: 105%;
+        font-size: var(--base-font-size) * 1.5;
     }
 }
 
